--- a/public/scss/utilities/_config.scss
+++ b/public/scss/utilities/_config.scss
@@ -138,6 +138,7 @@ $brkpnt-sm                : 736px;
 $brkpnt-xs                : 480px;
 $brkpnt-us                : 281px;
 
+/*===== Media query "splitpoints" =====*/
 $spltpnt-sm               : 1px;
 $spltpnt-md               : 768px;
 $spltpnt-lg               : 1100px;
