--- a/public/scss/modules/_slideshow.scss
+++ b/public/scss/modules/_slideshow.scss
@@ -2,7 +2,7 @@
 
 /**** SLIDESHOW
 *=======================================================================*/
-#slideshow {
+.slideshow {
   display: inline-block;
   position: relative;
   margin-bottom: rem(15px);
@@ -10,29 +10,64 @@
   > input {
     display: none;
 
-    &:nth-of-type(1):checked ~ ul li:first-of-type {
-      margin-left: 0%;
-    }
+      @include mq(split-md) {
 
-    &:nth-of-type(2):checked ~ ul li:first-of-type {
-      margin-left: -100.7%;
-    }
+        &:nth-of-type(1):checked ~ ul li:first-of-type {
+          margin-left: 0%;
+        }
 
-    &:nth-of-type(3):checked ~ ul li:first-of-type {
-      margin-left: -200.7%;
-    }
+        &:nth-of-type(2):checked ~ ul li:first-of-type {
+          margin-left: -100.7%;
+        }
 
-    &:nth-of-type(4):checked ~ ul li:first-of-type {
-      margin-left: -300.7%;
-    }
+        &:nth-of-type(3):checked ~ ul li:first-of-type {
+          margin-left: -200.7%;
+        }
 
-    &:nth-of-type(5):checked ~ ul li:first-of-type {
-      margin-left: -400.7%;
-    }
+        &:nth-of-type(4):checked ~ ul li:first-of-type {
+          margin-left: -301%;
+        }
 
-    &:nth-of-type(6):checked ~ ul li:first-of-type {
-      margin-left: -500.7%;
-    }
+        &:nth-of-type(5):checked ~ ul li:first-of-type {
+          margin-left: -401%;
+        }
+
+        &:nth-of-type(6):checked ~ ul li:first-of-type {
+          margin-left: -501%;
+        }
+
+      }
+
+      @include mq(split-sm) {
+
+        &:nth-of-type(1):checked ~ ul li:first-of-type {
+          margin-left: -1%;
+        }
+
+        &:nth-of-type(2):checked ~ ul li:first-of-type {
+          margin-left: -101.7%;
+        }
+
+        &:nth-of-type(3):checked ~ ul li:first-of-type {
+          margin-left: -203%;
+        }
+
+        &:nth-of-type(4):checked ~ ul li:first-of-type {
+          margin-left: -303.5%;
+        }
+
+        &:nth-of-type(5):checked ~ ul li:first-of-type {
+          margin-left: -405%;
+        }
+
+        &:nth-of-type(6):checked ~ ul li:first-of-type {
+          margin-left: -506%;
+        }
+
+      }
+
+
+
 
   }
 
