--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1071,6 +1071,9 @@ p, .para-primary, .para-primary--grouped {
     padding: 0;
     overflow: hidden;
     white-space: nowrap; }
+    @media (min-width: 1px) and (max-width: 768px) {
+      .slideshow ul {
+        border: 0.0625rem solid #0B0B0B; } }
   .slideshow.looper > input:first-of-type:checked ~ .side-scroller label.jump-end, .slideshow.looper input:nth-of-type(1):checked ~ .side-scroller > label:nth-of-type(0), .slideshow.looper input:nth-of-type(2):checked ~ .side-scroller > label:nth-of-type(1), .slideshow.looper input:nth-of-type(3):checked ~ .side-scroller > label:nth-of-type(2), .slideshow.looper input:nth-of-type(4):checked ~ .side-scroller > label:nth-of-type(3), .slideshow.looper input:nth-of-type(5):checked ~ .side-scroller > label:nth-of-type(4), .slideshow.looper input:nth-of-type(6):checked ~ .side-scroller > label:nth-of-type(5), .slideshow.looper input:nth-of-type(7):checked ~ .side-scroller > label:nth-of-type(6) {
     display: block;
     right: auto;
