--- a/public/scss/layout/_grid-columns.scss
+++ b/public/scss/layout/_grid-columns.scss
@@ -22,9 +22,9 @@
   @include mq(split-md) {
     @include doubly(percentage($g-gutter-width / $context));
     float: left;
-    min-height: 1px;
-    padding-right: 10px;
-    padding-left: 10px;
+    min-height: rem(1px);
+    padding-right: rem(10px);
+    padding-left: rem(10px);
 
     &:last-of-type {
       float: right;
