--- a/public/scss/modules/_index.scss
+++ b/public/scss/modules/_index.scss
@@ -14,6 +14,9 @@
 /*===== Import design tests =====*/
 @import "design_tests";
 
+/*===== Import Elevator.js style =====*/
+@import "elevator";
+
 /*===== Import placeholder selectors =====*/
 @import "extends";
 
