--- a/public/scss/modules/_index.scss
+++ b/public/scss/modules/_index.scss
@@ -47,6 +47,9 @@
 /*===== Import paragraphs =====*/
 @import "paragraphs";
 
+/*===== Import projects =====*/
+@import "projects";
+
 /*===== Import sad browser =====*/
 @import "sad_browser";
 
