--- a/public/scss/utilities/_config.scss
+++ b/public/scss/utilities/_config.scss
@@ -45,8 +45,12 @@ $studio                   : #714AB2;
 $stiletto                 : #9C3336;
 $heather                  : #B7C3D0;
 $milano-red               : #B81104;
+$guardsman-red            : #BA0101;
+$monza                    : #D70502;
 $sunglo                   : #E16865;
 $porcelain                : #EFF2F3;
+$sun-glow                 : #FFCC33;
+$tango                    : #F37A28;
 $coral                    : #FF7F50;
 
 /*===== Color usage =====*/
@@ -54,6 +58,8 @@ $color-primary            : $pacific-blue;
 $color-secondary          : $prussian-blue;
 $color-accent             : $emerald;
 $color-shadow             : rgba($black, .2);
+
+
 
 /*===== User interface colors map =====*/
 $ui-colors: (
