--- a/public/scss/utilities/_mixins.scss
+++ b/public/scss/utilities/_mixins.scss
@@ -116,9 +116,33 @@
 
 }
 
+
+/*===== Generate modifier color-gradient classes =====*/
+/// Mixin printing a linear-gradient
+/// as well as a plain color fallback
+/// @author Chris Eppstein
+/// @editor Ali Esmaili
+/// and the `-webkit-`, `-moz-`, and `-o-` prefixed declarations
+/// @access public
+/// @param {String | List | Angle} $direction - Linear gradient direction
+/// @param {Arglist} $color-stops - List of color-stops composing the gradient
+@mixin linear-gradient($direction, $color-stops...) {
+
+
+  @if is-direction($direction) == false {
+    $color-stops: ($direction, $color-stops);
+    $direction: 180deg;
+  }
+
+  background: nth(nth($color-stops, 1), 1);
+  background: -webkit-linear-gradient(legacy-direction($direction), $color-stops); /* For Safari 5.1 to 6.0 */
+  background: -moz-linear-gradient(remove-to($direction), $color-stops); /* For Firefox 3.6 to 15 */
+  background: -o-linear-gradient(remove-to($direction), $color-stops); /* For Opera 11.1 to 12.0 */
+  background: linear-gradient($direction, $color-stops); /* Standard syntax */
+}
+
 /*===== Generate :before or :after pseudo-element shapes =====*/
-@mixin p-el(
-  $el, $el-w: null, $el-h: null) {
+@mixin p-el($el, $el-w: null, $el-h: null) {
 
   @if $el == "before" or $el == "after" {
 
