--- a/public/css/main.css
+++ b/public/css/main.css
@@ -639,15 +639,15 @@ footer {
 .btn--info {
   background-color: #009DC4; }
 .btn--zero {
-  background-color: #3C1F76; }
+  background-color: #252525; }
 .btn--un {
-  background-color: #003153; }
+  background-color: #010D1A; }
 .btn--deux {
-  background-color: #652DC1; }
+  background-color: #1C1C1C; }
 .btn--trois {
-  background-color: #1FC2C2; }
+  background-color: #003153; }
 .btn--quatre {
-  background-color: #714AB2; }
+  background-color: #C7031E; }
 .btn--cinq {
   background-color: #5590D9; }
 .btn--six {
@@ -988,15 +988,15 @@ p, .para-primary, .para-primary--grouped {
 .layer--info {
   background-color: #009DC4; }
 .layer--zero {
-  background-color: #3C1F76; }
+  background-color: #252525; }
 .layer--un {
-  background-color: #003153; }
+  background-color: #010D1A; }
 .layer--deux {
-  background-color: #652DC1; }
+  background-color: #1C1C1C; }
 .layer--trois {
-  background-color: #1FC2C2; }
+  background-color: #003153; }
 .layer--quatre {
-  background-color: #714AB2; }
+  background-color: #C7031E; }
 .layer--cinq {
   background-color: #5590D9; }
 .layer--six {
@@ -1011,25 +1011,25 @@ p, .para-primary, .para-primary--grouped {
   background-color: #4682B4; }
 
 .layer-gradient--tr {
-  background: #F37A28;
-  background: -webkit-linear-gradient(bottom left, #F37A28 0%, #FFCC33 25%, #D70502 100%);
+  background: #ED7A1C;
+  background: -webkit-linear-gradient(bottom left, #ED7A1C 0%, #FFCC33 25%, #C7031E 100%);
   /* For Safari 5.1 to 6.0 */
-  background: -moz-linear-gradient(top right, #F37A28 0%, #FFCC33 25%, #D70502 100%);
+  background: -moz-linear-gradient(top right, #ED7A1C 0%, #FFCC33 25%, #C7031E 100%);
   /* For Firefox 3.6 to 15 */
-  background: -o-linear-gradient(top right, #F37A28 0%, #FFCC33 25%, #D70502 100%);
+  background: -o-linear-gradient(top right, #ED7A1C 0%, #FFCC33 25%, #C7031E 100%);
   /* For Opera 11.1 to 12.0 */
-  background: linear-gradient(to top right, #F37A28 0%, #FFCC33 25%, #D70502 100%);
+  background: linear-gradient(to top right, #ED7A1C 0%, #FFCC33 25%, #C7031E 100%);
   /* Standard syntax */ }
 
 .layer-gradient--bl {
-  background: #F37A28;
-  background: -webkit-linear-gradient(top right, #F37A28 0%, #FFCC33 25%, #D70502 100%);
+  background: #ED7A1C;
+  background: -webkit-linear-gradient(top right, #ED7A1C 0%, #FFCC33 25%, #C7031E 100%);
   /* For Safari 5.1 to 6.0 */
-  background: -moz-linear-gradient(bottom left, #F37A28 0%, #FFCC33 25%, #D70502 100%);
+  background: -moz-linear-gradient(bottom left, #ED7A1C 0%, #FFCC33 25%, #C7031E 100%);
   /* For Firefox 3.6 to 15 */
-  background: -o-linear-gradient(bottom left, #F37A28 0%, #FFCC33 25%, #D70502 100%);
+  background: -o-linear-gradient(bottom left, #ED7A1C 0%, #FFCC33 25%, #C7031E 100%);
   /* For Opera 11.1 to 12.0 */
-  background: linear-gradient(to bottom left, #F37A28 0%, #FFCC33 25%, #D70502 100%);
+  background: linear-gradient(to bottom left, #ED7A1C 0%, #FFCC33 25%, #C7031E 100%);
   /* Standard syntax */ }
 
 /*===== Import menu =====*/
