--- a/public/scss/utilities/_functions.scss
+++ b/public/scss/utilities/_functions.scss
@@ -3,9 +3,44 @@
 /**** FUNCTIONS
 *=======================================================================*/
 /*===== Import if Google Fonts URL is defined =====*/
-@if variable-exists(font-url--google) {
-  @import url($font-url--google);
+// @if variable-exists(font-url--google) {
+//   @import url($font-url--google);
+// }
+
+@font-face {
+  font-family: 'aleobold';
+  src: url('Aleo-Bold-webfont.eot');
+  src: url('Aleo-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+       url('Aleo-Bold-webfont.woff') format('woff'),
+       url('Aleo-Bold-webfont.ttf') format('truetype'),
+       url('Aleo-Bold-webfont.svg#aleobold') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
+
+@font-face {
+  font-family: 'aleolight';
+  src: url('Aleo-Light-webfont.eot');
+  src: url('Aleo-Light-webfont.eot?#iefix') format('embedded-opentype'),
+       url('Aleo-Light-webfont.woff') format('woff'),
+       url('Aleo-Light-webfont.ttf') format('truetype'),
+       url('Aleo-Light-webfont.svg#aleolight') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'aleoregular';
+  src: url('Aleo-Regular-webfont.eot');
+  src: url('Aleo-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('Aleo-Regular-webfont.woff') format('woff'),
+       url('Aleo-Regular-webfont.ttf') format('truetype'),
+       url('Aleo-Regular-webfont.svg#aleoregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 
 /*===== Converts pixels to rem values =====*/
 @function rem($target, $context: $base__font-size) {
