--- a/public/scss/utilities/_index.scss
+++ b/public/scss/utilities/_index.scss
@@ -2,6 +2,9 @@
 
 /**** UTILITIES MANIFEST
 *=======================================================================*/
+/*===== Import font mixins =====*/
+@import "font_mixins";
+
 /*===== Import global configuration =====*/
 @import "config";
 
