--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -2,6 +2,9 @@
 
 /**** MAIN MANIFEST
 *=======================================================================*/
+/*===== Import reset styles =====*/
+@import "reset/index";
+
 /*===== Import utilities =====*/
 @import "utilities/index";
 
