--- a/public/scss/modules/_navbar.scss
+++ b/public/scss/modules/_navbar.scss
@@ -5,7 +5,7 @@
 .navbar {
   position: relative;
 
-  @include mq(split-md) {
+  @include medq(split-md) {
     margin-top: rem(53px);
     margin-bottom: 0;
   }
